Add grid for calculator symbols

--- a/index.html
+++ b/index.html
@@ -6,12 +6,74 @@
     <title>Calculator</title>
     <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Nunito:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>CALCULATOR</h1>
     </header>
-    <main></main>
+    <main>
+      <!-- Numbers -->
+      <div id="zero" class="symbol">
+        0
+      </div>
+      <div id="one" class="symbol">
+        1
+      </div>
+      <div id="two" class="symbol">
+        2
+      </div>
+      <div id="three" class="symbol">
+        3
+      </div>
+      <div id="four" class="symbol">
+        4
+      </div>
+      <div id="five" class="symbol">
+        5
+      </div>
+      <div id="six" class="symbol">
+        6
+      </div>
+      <div id="seven" class="symbol">
+        7
+      </div>
+      <div id="eight" class="symbol">
+        8
+      </div>
+      <div id="nine" class="symbol">
+        9
+      </div>
+      <div id="decimal" class="symbol">
+        .
+      </div>
+      <!-- Operations -->
+      <div id="clear" class="symbol">
+        C
+      </div>
+      <div id="back" class="symbol">
+        <-
+      </div>
+      <div id="power" class="symbol">
+        x2
+      </div>
+      <div id="divide" class="symbol">
+        /
+      </div>
+      <div id="multiply" class="symbol">
+        x
+      </div>
+      <div id="subtract" class="symbol">
+        -
+      </div>
+      <div id="add" class="symbol">
+        +
+      </div>
+      <div id="equals" class="symbol">
+        =
+      </div>
+    </main>
     <footer>
       <p>☽ Crafted by mooniiDev ☾</p>
     </footer>
