Update style, add calculations, clear, back and display number functions

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/styles.css">
     <link href="css/all.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -18,48 +18,22 @@
     </header>
 
     <main>
-      <div id="output">
-        OUTPUT
-      </div>
+      <div id="display"></div>
       <!-- Numbers -->
-      <div id="zero" class="symbol number">
-        0
-      </div>
-      <div id="one" class="symbol number">
-        1
-      </div>
-      <div id="two" class="symbol number">
-        2
-      </div>
-      <div id="three" class="symbol number">
-        3
-      </div>
-      <div id="four" class="symbol number">
-        4
-      </div>
-      <div id="five" class="symbol number">
-        5
-      </div>
-      <div id="six" class="symbol number">
-        6
-      </div>
-      <div id="seven" class="symbol number">
-        7
-      </div>
-      <div id="eight" class="symbol number">
-        8
-      </div>
-      <div id="nine" class="symbol number">
-        9
-      </div>
-      <div id="decimal" class="symbol number">
-        .
-      </div>
+      <div id="zero" class="symbol number">0</div>
+      <div id="one" class="symbol number">1</div>
+      <div id="two" class="symbol number">2</div>
+      <div id="three" class="symbol number">3</div>
+      <div id="four" class="symbol number">4</div>
+      <div id="five" class="symbol number">5</div>
+      <div id="six" class="symbol number">6</div>
+      <div id="seven" class="symbol number">7</div>
+      <div id="eight" class="symbol number">8</div>
+      <div id="nine" class="symbol number">9</div>
+      <div id="decimal" class="symbol number">.</div>
 
       <!-- Operations -->
-      <div id="clear" class="symbol operation">
-        C
-      </div>
+      <div id="clear" class="symbol operation">C</div>
       <div id="back" class="symbol operation">
         <i class="fal fa-long-arrow-left"></i>
       </div>
@@ -86,6 +60,6 @@
     <footer>
       <p>☽ Crafted by mooniiDev ☾</p>
     </footer>
+    <script type="text/javascript" src="scripts.js"></script>
   </body>
-
 </html>
