Add function to operate basic calculations

--- a/index.html
+++ b/index.html
@@ -33,28 +33,14 @@
       <div id="decimal" class="symbol number">.</div>
 
       <!-- Operations -->
-      <div id="clear" class="symbol operation">C</div>
-      <div id="back" class="symbol operation">
-        <i class="fal fa-long-arrow-left"></i>
-      </div>
-      <div id="power" class="symbol operation">
-        <i class="fal fa-superscript"></i>
-      </div>
-      <div id="divide" class="symbol operation">
-        <i class="fal fa-divide"></i>
-      </div>
-      <div id="multiply" class="symbol operation">
-        <i class="fal fa-times"></i>
-      </div>
-      <div id="subtract" class="symbol operation">
-        <i class="fal fa-minus"></i>
-      </div>
-      <div id="add" class="symbol operation">
-        <i class="fal fa-plus"></i>
-      </div>
-      <div id="equals" class="symbol operation">
-        <i class="fal fa-equals"></i>
-      </div>
+      <div id="clear" class="symbol">C</div>
+      <div id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></div>
+      <div id="power" class="symbol operator"><i class="fal fa-superscript"></i></div>
+      <div id="divide" class="symbol operator"><i class="fal fa-divide"></i></div>
+      <div id="multiply" class="symbol operator"><i class="fal fa-times"></i></div>
+      <div id="subtract" class="symbol operator"><i class="fal fa-minus"></i></div>
+      <div id="add" class="symbol operator"><i class="fal fa-plus"></i></div>
+      <div id="equals" class="symbol"><i class="fal fa-equals"></i></div>
     </main>
 
     <footer>
