--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
 
     <main>
-      <div id="display"></div>
+      <div id="display">
+        <div id="input"></div>
+      </div>
       <!-- Numbers -->
       <div id="zero" class="symbol number">0</div>
       <div id="one" class="symbol number">1</div>
