Add function to show calculation history

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="noSelect">
     <header>
       <h1 class="title"><span class="calc">CALC</span>ULATOR</h1>
     </header>
 
     <main>
       <div id="display">
-        <div id="input"></div>
+        <div id="calcHistory"></div>
+        <div id="calcInput"></div>
       </div>
       <!-- Numbers -->
       <div id="zero" class="symbol number">0</div>
@@ -38,7 +39,7 @@
       <!-- Operations -->
       <div id="clear" class="symbol">C</div>
       <div id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></div>
-      <div id="power" class="symbol operator"><i class="fal fa-superscript"></i></div>
+      <div id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></div>
       <div id="divide" class="symbol operator"><i class="fal fa-divide"></i></div>
       <div id="multiply" class="symbol operator"><i class="fal fa-times"></i></div>
       <div id="subtract" class="symbol operator"><i class="fal fa-minus"></i></div>
