Add function to round number, update calculations, clear, show number and operate functions, update calculation history style

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="multiply" class="symbol operator"><i class="fal fa-times"></i></div>
       <div id="subtract" class="symbol operator"><i class="fal fa-minus"></i></div>
       <div id="add" class="symbol operator"><i class="fal fa-plus"></i></div>
-      <div id="equals" class="symbol"><i class="fal fa-equals"></i></div>
+      <div id="equals" class="symbol operator"><i class="fal fa-equals"></i></div>
     </main>
 
     <footer>
