--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
         <div id="calcInput"></div>
       </div>
       <!-- Numbers -->
-      <div id="zero" class="symbol number">0</div>
-      <div id="one" class="symbol number">1</div>
-      <div id="two" class="symbol number">2</div>
-      <div id="three" class="symbol number">3</div>
-      <div id="four" class="symbol number">4</div>
-      <div id="five" class="symbol number">5</div>
-      <div id="six" class="symbol number">6</div>
-      <div id="seven" class="symbol number">7</div>
-      <div id="eight" class="symbol number">8</div>
-      <div id="nine" class="symbol number">9</div>
-      <div id="decimal" class="symbol number">.</div>
+      <button id="zero" class="symbol number">0</button>
+      <button id="one" class="symbol number">1</button>
+      <button id="two" class="symbol number">2</button>
+      <button id="three" class="symbol number">3</button>
+      <button id="four" class="symbol number">4</button>
+      <button id="five" class="symbol number">5</button>
+      <button id="six" class="symbol number">6</button>
+      <button id="seven" class="symbol number">7</button>
+      <button id="eight" class="symbol number">8</button>
+      <button id="nine" class="symbol number">9</button>
+      <button id="decimal" class="symbol">.</button>
       <!-- Operations -->
-      <div id="clear" class="symbol">C</div>
-      <div id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></div>
-      <div id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></div>
-      <div id="divide" class="symbol operator"><i class="fal fa-divide"></i></div>
-      <div id="multiply" class="symbol operator"><i class="fal fa-times"></i></div>
-      <div id="subtract" class="symbol operator"><i class="fal fa-minus"></i></div>
-      <div id="add" class="symbol operator"><i class="fal fa-plus"></i></div>
-      <div id="equals" class="symbol operator"><i class="fal fa-equals"></i></div>
+      <button id="clear" class="symbol">C</button>
+      <button id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></button>
+      <button id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></button>
+      <button id="divide" class="symbol operator"><i class="fal fa-divide"></i></button>
+      <button id="multiply" class="symbol operator"><i class="fal fa-times"></i></button>
+      <button id="subtract" class="symbol operator"><i class="fal fa-minus"></i></button>
+      <button id="add" class="symbol operator"><i class="fal fa-plus"></i></button>
+      <button id="equals" class="symbol operator"><i class="fal fa-equals"></i></button>
     </main>
 
     <footer>
