--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button id="multiply" class="symbol operator"><i class="fal fa-times"></i></button>
       <button id="subtract" class="symbol operator"><i class="fal fa-minus"></i></button>
       <button id="add" class="symbol operator"><i class="fal fa-plus"></i></button>
-      <button id="equals" class="symbol operator"><i class="fal fa-equals"></i></button>
+      <button id="equals" class="symbol"><i class="fal fa-equals"></i></button>
     </main>
 
     <footer>
