Update footer style and 'showDecimal' function

--- a/index.html
+++ b/index.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link type="text/css" rel="stylesheet" href="css/normalize.css">
-    <link type="text/css" rel="stylesheet" href="css/styles.css">
-    <link href="css/fontawesome.min.css" rel="stylesheet">
-    <link href="css/light.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>
+  <link type="text/css" rel="stylesheet" href="css/normalize.css">
+  <link type="text/css" rel="stylesheet" href="css/styles.css">
+  <link href="css/fontawesome.min.css" rel="stylesheet">
+  <link href="css/light.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
+</head>
 
-  <body class="noSelect">
-    <header>
-      <h1 class="title"><span class="calc">CALC</span>ULATOR</h1>
-    </header>
+<body class="noSelect">
+  <header>
+    <h1 class="title"><span class="calc">CALC</span>ULATOR</h1>
+  </header>
 
-    <main>
-      <div id="display">
-        <div id="calcHistory"></div>
-        <div id="calcInput"></div>
-      </div>
-      <!-- Numbers -->
-      <button id="zero" class="symbol number">0</button>
-      <button id="one" class="symbol number">1</button>
-      <button id="two" class="symbol number">2</button>
-      <button id="three" class="symbol number">3</button>
-      <button id="four" class="symbol number">4</button>
-      <button id="five" class="symbol number">5</button>
-      <button id="six" class="symbol number">6</button>
-      <button id="seven" class="symbol number">7</button>
-      <button id="eight" class="symbol number">8</button>
-      <button id="nine" class="symbol number">9</button>
-      <button id="decimal" class="symbol">.</button>
-      <!-- Operations -->
-      <button id="clear" class="symbol">C</button>
-      <button id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></button>
-      <button id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></button>
-      <button id="divide" class="symbol operator"><i class="fal fa-divide"></i></button>
-      <button id="multiply" class="symbol operator"><i class="fal fa-times"></i></button>
-      <button id="subtract" class="symbol operator"><i class="fal fa-minus"></i></button>
-      <button id="add" class="symbol operator"><i class="fal fa-plus"></i></button>
-      <button id="equals" class="symbol"><i class="fal fa-equals"></i></button>
-    </main>
+  <main>
+    <div id="display">
+      <div id="calcHistory"></div>
+      <div id="calcInput"></div>
+    </div>
+    <!-- Numbers -->
+    <button id="zero" class="symbol number">0</button>
+    <button id="one" class="symbol number">1</button>
+    <button id="two" class="symbol number">2</button>
+    <button id="three" class="symbol number">3</button>
+    <button id="four" class="symbol number">4</button>
+    <button id="five" class="symbol number">5</button>
+    <button id="six" class="symbol number">6</button>
+    <button id="seven" class="symbol number">7</button>
+    <button id="eight" class="symbol number">8</button>
+    <button id="nine" class="symbol number">9</button>
+    <button id="decimal" class="symbol">.</button>
+    <!-- Operations -->
+    <button id="clear" class="symbol">C</button>
+    <button id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></button>
+    <button id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></button>
+    <button id="divide" class="symbol operator"><i class="fal fa-divide"></i></button>
+    <button id="multiply" class="symbol operator"><i class="fal fa-times"></i></button>
+    <button id="subtract" class="symbol operator"><i class="fal fa-minus"></i></button>
+    <button id="add" class="symbol operator"><i class="fal fa-plus"></i></button>
+    <button id="equals" class="symbol"><i class="fal fa-equals"></i></button>
+  </main>
 
-    <footer>
-      <p>☽ Crafted by mooniiDev ☾</p>
-    </footer>
+  <footer>
+    <p>☽ Crafted by <a href="https://github.com/mooniiDev/calculator" id="copyright" target="_blank">mooniiDev</a> ☾</p>
+  </footer>
 
-    <script type="text/javascript" src="scripts.js"></script>
-  </body>
+  <script type="text/javascript" src="scripts.js"></script>
+</body>
+
 </html>
