Add keyboard support

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <div id="calcInput"></div>
     </div>
     <!-- Numbers -->
-    <button id="zero" class="symbol number">0</button>
-    <button id="one" class="symbol number">1</button>
-    <button id="two" class="symbol number">2</button>
-    <button id="three" class="symbol number">3</button>
-    <button id="four" class="symbol number">4</button>
-    <button id="five" class="symbol number">5</button>
-    <button id="six" class="symbol number">6</button>
-    <button id="seven" class="symbol number">7</button>
-    <button id="eight" class="symbol number">8</button>
-    <button id="nine" class="symbol number">9</button>
+    <button id="number-0" class="symbol number">0</button>
+    <button id="number-1" class="symbol number">1</button>
+    <button id="number-2" class="symbol number">2</button>
+    <button id="number-3" class="symbol number">3</button>
+    <button id="number-4" class="symbol number">4</button>
+    <button id="number-5" class="symbol number">5</button>
+    <button id="number-6" class="symbol number">6</button>
+    <button id="number-7" class="symbol number">7</button>
+    <button id="number-8" class="symbol number">8</button>
+    <button id="number-9" class="symbol number">9</button>
     <button id="decimal" class="symbol">.</button>
     <!-- Operations -->
     <button id="clear" class="symbol">C</button>
