Disable buttons highlight

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
 </head>
 
-<body class="noSelect">
+<body>
   <header>
     <h1 class="title"><span class="calc">CALC</span>ULATOR</h1>
   </header>
