Change class name of 'power' operation button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Operations -->
     <button id="clear" class="symbol">C</button>
     <button id="back" class="symbol"><i class="fal fa-long-arrow-left"></i></button>
-    <button id="power" class="symbol operator">X<sup id="powerSuperscript">y</sup></button>
+    <button id="power" class="symbol operator">X<sup id="power-superscript">y</sup></button>
     <button id="divide" class="symbol operator"><i class="fal fa-divide"></i></button>
     <button id="multiply" class="symbol operator"><i class="fal fa-times"></i></button>
     <button id="subtract" class="symbol operator"><i class="fal fa-minus"></i></button>
